--- a/app/globals.css
+++ b/app/globals.css
@@ -2,4 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-body{ background-color: #1c211c;}
+body {
+  background-color: #1c211c;
+}
+
+.swiper-button-prev:after,
+.swiper-rtl .swiper-button-next:after {
+  color: white;
+}
+
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  color: white;
+}
